arika/tests/trybuild/null_eop_in_iau2006.stderr
error[E0277]: the trait bound `NullEop: NutationCorrections` is not satisfied
  --> tests/trybuild/null_eop_in_iau2006.rs:14:57
   |
14 |     let _q = Rotation::<Gcrs, Cirs>::iau2006(&tt, &utc, &NullEop);
   |              -------------------------------            ^^^^^^^^ the trait `NutationCorrections` is not implemented for `NullEop`
   |              |
   |              required by a bound introduced by this call
   |
   = help: the trait `NutationCorrections` is implemented for `EopTable`
note: required by a bound in `cio_chain::<impl Rotation<arika::frame::Gcrs, arika::frame::Cirs>>::iau2006`
  --> src/earth/iau2006/cio_chain.rs
   |
   |     pub fn iau2006<P>(tt: &Epoch<Tt>, utc: &Epoch<Utc>, eop: &P) -> Self
   |            ------- required by a bound in this associated function
   |     where
   |         P: NutationCorrections + ?Sized,
   |            ^^^^^^^^^^^^^^^^^^^ required by this bound in `cio_chain::<impl Rotation<Gcrs, Cirs>>::iau2006`
